--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -18,5 +18,8 @@
     "UNABLE_TO_DELETE_EXPENSE": "",
     "UNABLE_TO_SUBMIT_EXPENSE": "",
     "YOUR_EXPENSE": "",
-    "INVALID_INPUT_DATES_CHECK_ENTERED_DATA": ""
+    "INVALID_INPUT_DATES_CHECK_ENTERED_DATA": "",
+    "NO_EXPENSES": "",
+    "LAST_N_DAYS_one": "",
+    "LAST_N_DAYS_other": ""
 }
